--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "video-streaming",
   "version": "0.1.0",
-  "private": true, 
+  "private": true,
   "dependencies": {
     "@aws-sdk/client-s3": "^3.317.0",
     "@aws-sdk/lib-storage": "^3.317.0",
@@ -13,6 +13,7 @@
     "axios": "^1.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
