--- a/frontend/.env
+++ b/frontend/.env
@@ -2,4 +2,4 @@ REACT_APP_OAC='https://direct-upload-from-frontend.s3.ap-south-1.amazonaws.com'
 REACT_APP_DEFAULT_COVERPAGE='https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTAFBy_9Wwc7vUhLMgzzACgvfPcWQOw297s2Q&usqp=CAU'
 REACT_APP_AWS_ACCESS_KEY_ID='AKIASG4I4JSZECPVW6XK'
 REACT_APP_AWS_SECRET_ACCESS_KEY='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'
-REACT_APP_BACKEND_URL=http://localhost:8000/api/v1
+REACT_APP_BACKEND_URL=https://justbooks-backend.onrender.com/api/v1
